Fix bug: font rendered differently on Safari and Firefox

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,5 +1,7 @@
 html, body
   font-family: 'Roboto','Helvetica',sans-serif
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
 nav
   background-color: #EF6C00
@@ -9,6 +11,7 @@ nav
     .brand-logo
       font-size: 20px
       letter-spacing: 0.018666rem
+      font-weight: 500
     .side-nav
       .side-nav-title
         padding: 0 30px
@@ -20,7 +23,7 @@ nav
     font-size: 0.866666rem
     padding: 0 24px
     line-height: 64px
-    font-weight: 500
+    font-weight: bolder
   ul li:hover
     background-color: transparent
 
